<resources>
    <string name="app_name">Punjab Mohtasib</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="cell_no">Cell No.</string>
    <string name="address">Address</string>
    <string name="cnic">Cnic</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="required">Required</string>
    <string name="registration_link_text">Not a member? Tap here to Register...</string>
    <string name="login_link_text">Already a member? Tap here to Login...</string>
    <string name="internet_available_title">No Connection</string>
    <string name="internet_available_msg">There is no internet connection on the device. Please check the connection and try again.</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dashboard">Dasboard</string>
    <string name="info">Information</string>

    <string-array name="menu_titles">
        <item>Introduction</item>
        <item>Ombudsman Profile</item>
        <item>Mandate</item>
        <item>Ombudsman Punjab Act, 1997</item>
        <item>Complaint Handling Process</item>
        <item>Register Complaints</item>
        <item>Complaints Status</item>
        <item>Find Us</item>
        <item>What we do?</item>
        <item>What we dont?</item>
        <item>FAQS</item>
        <item>Employee Area</item>
        <item>Locate Us On Map</item>
    </string-array>

    <string name="introduction">Introduction</string>
    <string name="profile">Ombudsman Profile</string>
    <string name="mandate">Mandate</string>
    <string name="act">Ombudsman Punjab Act, 1997</string>
    <string name="ombudsman_act">Ombudsman Act</string>
    <string name="processs">Complaint Handling Process</string>
    <string name="complaints_registration">Register Complaints</string>
    <string name="complaints_status">Complaints Status</string>
    <string name="find_us">Find Us</string>
    <string name="what_we_do">What we do?</string>
    <string name="what_we_dont">What we dont?</string>
    <string name="faqs">FAQS</string>
    <string name="locate_us">Locate Us On Map</string>
    <string name="employee_area">Employee Area</string>
    <string name="complaintant_name">Complaintant Name</string>
    <string name="complaintant_email">Complaintant Email</string>
    <string name="city">City</string>
    <string name="mohtasib_office">Mohtasib Office</string>
    <string name="complaint_against">Agency Name</string>
    <string name="complaint_againsts">Complaint Against</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="attachment">Attachment</string>
    <string name="error">Error</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="from">From</string>
    <string name="my_complaints">My Complaints</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="approve">Approve</string>
    <string name="verification_code">Verification Code</string>
    <string name="user_type">User Type</string>
    <string name="user">user</string>
    <string name="reject">Reject</string>
    <string name="gotosettings">GOTO SETTINGS</string>
    <string name="needpermission">Need Permissions</string>
    <string name="permissionmessage">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="verifying_email">Verifying Email</string>
    <string name="please_wait">Please Wait</string>
    <string name="input_verification_code_message">We have sent a verification code at your email address. Please enter the code to continue.</string>
    <string name="verification_error">Invalid verification code.</string>
    <string name="incorrect_credentials">Incorrect username or password.</string>
    <string name="islogged_in">IsLoggedIn</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="already_approved">You already approved this request.</string>
    <string name="already_rejected">You already rejected this request.</string>


</resources>
